--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
 body {
   font-family: "Lato", sans-serif;
   font-weight: 400;
@@ -30,4 +31,58 @@ body {
     letter-spacing: 1.75rem;
     animation: moveInRight 1s ease-out;
   }
+}
+
+.heading-secondary {
+  font-size: 3.5rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  letter-spacing: 0.2rem;
+
+  background-image: linear-gradient(
+    to right,
+    $color-primary-light,
+    $color-primary-dark
+  );
+  display: inline-block;
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+
+  transition: all 0.2s;
+
+  &:hover {
+    transform: skewY(2deg) skewX(15deg) scale(1.1);
+    text-shadow: 0.5rem 1rem 2rem rgba($color-black, $alpha: 0.2);
+  }
+}
+
+.u-inter {
+  font-family: "Inter", sans-serif;
+}
+.heading-test {
+  font-size: 2.4rem;
+  text-transform: capitalize;
+  font-weight: 700;
+  font-family: "Raleway", sans-serif;
+  line-height: 120%;
+  letter-spacing: normal;
+
+  background-image: linear-gradient(
+    90deg,
+    #ff981a 0% 16%,
+    #ffad48 16% 26%,
+    #ffb75e 26% 42%,
+    #ffc176 42% 51%,
+    #ffcc8d 52% 64%,
+    #ffd6a3 64% 77%,
+    #ffe0ba 80% 88%,
+    #ffead1 88% 96.1%,
+    #fff 96.1% 100%
+  );
+
+  display: inline-block;
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
 }
